--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,9 @@
           <compilerArgs>
             <arg>-parameters</arg>
           </compilerArgs>
+          <processTypes>
+            <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>
+          </processTypes>
         </configuration>
       </plugin>
       <plugin>
