--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 		<version>3.0.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	<version>0.0.1</version>
 	<groupId>com.m2t</groupId>
 	<artifactId>hachiko-dictionary</artifactId>
 	<name>hachiko-dictionary</name>
