--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   dictionary:
-    image: 'hachiko2k/hachiko-dictionary'
+    image: 'hachiko2k/hachiko-dictionary:0.0.1'
     ports:
       - "8888:8888"
     depends_on:
