--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ target/
 !**/src/test/**/target/
 
 # Environment variables
-src/main/resources/application.properties
+src/main/resources/application.yml
+
 ### STS ###
 .apt_generated
 .classpath
