--- a/.github/workflows/push-hub.yaml
+++ b/.github/workflows/push-hub.yaml
@@ -19,5 +19,14 @@ jobs:
       - name: Build Docker image
         run: docker build -t hachiko2k/hachiko-dictionary:latest .
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Build with Maven
+        run: mvn clean package
+
       - name: Push Docker image to Docker Hub
         run: docker push hachiko2k/hachiko-dictionary:latest
