.mvn removed from git

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+.mvn
+
 # Environment variables
 src/main/resources/application.yml
 src/main/resources/application.properties
