--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ target/
 
 # Environment variables
 src/main/resources/application.yml
+src/main/resources/application.properties
 src/main/resources/application-dev.properties
 
 ### STS ###
