--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ target/
 # Environment variables
 src/main/resources/application.yml
 src/main/resources/application.properties
-src/main/resources/application-dev.properties
+#src/main/resources/application-dev.properties
 
 ### STS ###
 .apt_generated
