--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ POSTMARK_API_KEY=postmarkAPIKEY
 
 spring.data.mongodb.uri=mongodb://root:example@localhost:27017/mydatabase
 spring.data.mongodb.database=hachiko-dictionary
+
+management.endpoints.web.exposure.include=health,prometheus,metrics
