--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
 			<version>2.15.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
 		<!-- support for "Java 8 Dates" -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
