x: description added to stored images

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ target/
 !**/src/test/**/target/
 
 # Environment variables
-#src/main/resources/application.properties
+src/main/resources/application-prod.properties
 
 ### STS ###
 .apt_generated
